# midi-synth

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Main.cpp  MainComponent.cpp  MainComponent.h  SynthAudioSource.cpp  SynthAudioSource.h
